# AmazeLite

./: .gitignore  CHANGELOG.md  README.md  build_all.sh  build_native_android_so.sh  build_zpaq_apk.sh  setup_env.sh
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  zpaq_jni.cpp  zpaq_official_jni.cpp
app/src/main/cpp/zpaqcli/: zpaq.cpp
app/src/main/java/com/operit/amazelite/: DialogHelper.java  FileOperations.java  MainActivity.java  OpenWithHelper.java  ZpaqLib.java  ZpaqTest.java
app/src/main/java/com/operit/zpaq/: ZPAQNative.java
app/src/main/res/drawable/: bg_button_primary.xml  bg_button_tonal.xml  bg_card.xml  ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
